Update lab materials and slides: Switch GitHub MCP to Firecrawl, fix paths, and regenerate PDF

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "cli",
     "training",
     "agentic-coding"
-  ]
+  ],
+  "devDependencies": {
+    "playwright-chromium": "^1.57.0"
+  }
 }
