--- a/config-examples/settings-basic.json
+++ b/config-examples/settings-basic.json
@@ -1,15 +1,20 @@
 {
-  "$schema": "https://raw.githubusercontent.com/google-gemini/gemini-cli/main/packages/cli/schemas/settings.json",
+  "$schema": "https://raw.githubusercontent.com/google-gemini/gemini-cli/main/schemas/settings.schema.json",
   "_comment": "Basic Gemini CLI configuration for getting started",
 
-  "theme": "Default",
-  "hideTips": false,
-  "hideBanner": false,
-  "vimMode": false,
-
-  "autoAccept": false,
-  "sandbox": false,
-  "checkpointing": true,
-
-  "preferredEditor": "vscode"
+  "general": {
+    "preferredEditor": "vscode",
+    "vimMode": false,
+    "defaultApprovalMode": "default",
+    "checkpointing": {
+      "enabled": true
+    }
+  },
+  "ui": {
+    "hideTips": false,
+    "hideBanner": false
+  },
+  "tools": {
+    "sandbox": false
+  }
 }
