--- a/config-examples/settings-mcp.json
+++ b/config-examples/settings-mcp.json
@@ -1,46 +1,65 @@
 {
-  "$schema": "https://raw.githubusercontent.com/google-gemini/gemini-cli/main/packages/cli/schemas/settings.json",
+  "$schema": "https://raw.githubusercontent.com/google-gemini/gemini-cli/main/schemas/settings.schema.json",
   "_comment": "Configuration with MCP servers for extended functionality",
 
-  "theme": "Default",
-  "hideTips": true,
-  "hideBanner": false,
-  "vimMode": false,
-
-  "autoAccept": false,
-  "sandbox": false,
-  "checkpointing": true,
-
-  "preferredEditor": "vscode",
-
+  "general": {
+    "preferredEditor": "vscode",
+    "defaultApprovalMode": "default",
+    "checkpointing": {
+      "enabled": true
+    }
+  },
+  "ui": {
+    "hideTips": true,
+    "hideBanner": false
+  },
+  "tools": {
+    "sandbox": false
+  },
+  "mcp": {
+    "allowed": [
+      "github",
+      "filesystem"
+    ],
+    "excluded": []
+  },
   "mcpServers": {
     "github": {
       "command": "npx",
-      "args": ["@modelcontextprotocol/server-github"],
+      "args": [
+        "-y",
+        "@modelcontextprotocol/server-github"
+      ],
       "env": {
-        "GITHUB_TOKEN": "${GITHUB_TOKEN}"
+        "GITHUB_TOKEN": "$GITHUB_TOKEN"
       },
       "timeout": 30000,
-      "includeTools": ["list_repos", "get_repo", "list_issues", "create_issue"]
+      "includeTools": [
+        "list_repos",
+        "get_repo",
+        "list_issues",
+        "create_issue"
+      ]
     },
-
     "filesystem": {
       "command": "npx",
-      "args": ["@modelcontextprotocol/server-filesystem", "/path/to/allowed/dir"],
+      "args": [
+        "-y",
+        "@modelcontextprotocol/server-filesystem",
+        "/path/to/allowed/dir"
+      ],
       "timeout": 10000
     },
-
     "postgres": {
       "command": "npx",
-      "args": ["@modelcontextprotocol/server-postgres"],
+      "args": [
+        "-y",
+        "@modelcontextprotocol/server-postgres"
+      ],
       "env": {
-        "CONNECTION_STRING": "${DATABASE_URL}"
+        "CONNECTION_STRING": "$DATABASE_URL"
       },
       "timeout": 15000
     }
-  },
-
-  "allowMCPServers": ["github", "filesystem"],
-
-  "excludeMCPServers": []
+  }
 }
