--- a/config-examples/settings-safe.json
+++ b/config-examples/settings-safe.json
@@ -1,41 +1,49 @@
 {
-  "$schema": "https://raw.githubusercontent.com/google-gemini/gemini-cli/main/packages/cli/schemas/settings.json",
+  "$schema": "https://raw.githubusercontent.com/google-gemini/gemini-cli/main/schemas/settings.schema.json",
   "_comment": "Safety-focused configuration - restricted tools, sandbox enabled",
 
-  "theme": "Default",
-  "hideTips": false,
-  "hideBanner": false,
-  "vimMode": false,
-
-  "autoAccept": false,
-  "sandbox": true,
-  "checkpointing": true,
-
-  "preferredEditor": "vscode",
-
-  "coreTools": [
-    "read_file",
-    "glob",
-    "google_web_search"
-  ],
-
-  "excludeTools": [
-    "shell",
-    "write_file",
-    "replace"
-  ],
-
-  "fileFiltering": {
-    "respectGitIgnore": true,
-    "enableRecursiveFileSearch": false
+  "general": {
+    "preferredEditor": "vscode",
+    "vimMode": false,
+    "defaultApprovalMode": "plan",
+    "checkpointing": {
+      "enabled": true
+    }
   },
-
-  "maxSessionTurns": 50,
-
-  "usageStatisticsEnabled": false,
-
-  "telemetry": {
-    "enabled": false,
-    "logPrompts": false
+  "ui": {
+    "hideTips": false,
+    "hideBanner": false
+  },
+  "model": {
+    "maxSessionTurns": 50
+  },
+  "context": {
+    "fileFiltering": {
+      "respectGitIgnore": true,
+      "respectGeminiIgnore": true,
+      "enableRecursiveFileSearch": false,
+      "enableFuzzySearch": false
+    }
+  },
+  "tools": {
+    "sandbox": "docker",
+    "allowed": [
+      "read_file",
+      "read_many_files",
+      "glob",
+      "search_file_content",
+      "google_web_search"
+    ],
+    "exclude": [
+      "run_shell_command",
+      "write_file",
+      "replace"
+    ]
+  },
+  "privacy": {
+    "usageStatisticsEnabled": false
+  },
+  "security": {
+    "disableYoloMode": true
   }
 }
